--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -12,6 +12,10 @@
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="{%static 'css/styles.css'%}" />
     <title>Boy’s T-Shirt</title>
+    {%block link_block%}
+    
+
+    {%endblock%}
   </head>
 
   <body>
@@ -118,8 +122,10 @@
     </footer>
     <!-- Custom Script -->
     <script src="{%static 'js/index.js'%}"></script>
-    {%block script_block%}
-
-    {%endblock%}
+    
   </body>
+  {%block script_block%}
+
+  
+  {%endblock%}
 </html>
